--- a/package.json
+++ b/package.json
@@ -6,5 +6,13 @@
   "repository": "https://github.com/rockhopper-penguin/penguin-graphql",
   "author": "Rockhopper-Penguin",
   "license": "MIT",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "apollo-server": "^2.15.1",
+    "mysql2": "^2.1.0",
+    "ts-node": "^8.10.2",
+    "type-graphql": "^1.0.0-rc.3",
+    "typeorm": "^0.2.25",
+    "typescript": "^3.9.6"
+  }
 }
