--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,15 @@ version: "3.1"
 services:
   db:
     image: mysql:latest
-    container_name: mysql
+    container_name: penguin_db
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
     ports:
       - 3306:3306
     environment:
       MYSQL_DATABASE: penguin-graphql
       MYSQL_USER: penguin
       MYSQL_PASSWORD: penguin
+      MYSQL_ROOT_PASSWORD: password
       MYSQL_RANDOM_ROOT_PASSWORD: "1"
       TZ: "Asia/Tokyo"
     volumes:
