--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,14 @@
 version: "3.1"
-
 services:
   db:
-    image: mysql:latest
+    image: mariadb
     container_name: penguin_db
-    command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
+    volumes:
+      - ./initdb.d:/docker-entrypoint-initdb.d
     ports:
-      - 3306:3306
+      - "3306:3306"
     environment:
+      MYSQL_ROOT_PASSWORD: penguin
       MYSQL_DATABASE: penguin-graphql
       MYSQL_USER: penguin
       MYSQL_PASSWORD: penguin
-      MYSQL_ROOT_PASSWORD: password
-      MYSQL_RANDOM_ROOT_PASSWORD: "1"
-      TZ: "Asia/Tokyo"
-    volumes:
-      - ./initdb.d:/docker-entrypoint-initdb.d
