--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,10 @@ services:
     container_name: penguin_db
     volumes:
       - ./initdb.d:/docker-entrypoint-initdb.d
+      - ./cnf/my.cnf:/etc/mysql/conf.d/my.cnf
     ports:
       - "3306:3306"
+    command: mysqld --character-set-server=utf8 --collation-server=utf8_general_ci
     environment:
       MYSQL_ROOT_PASSWORD: penguin
       MYSQL_DATABASE: penguin-graphql
