--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,12 @@ services:
       MYSQL_DATABASE: penguin-graphql
       MYSQL_USER: penguin
       MYSQL_PASSWORD: penguin
+  node:
+    image: node:12.18.3-buster
+    ports:
+      - 3000:3000
+    volumes:
+      - .:/src
+    stdin_open: true
+    tty: true
+    command: /bin/sh
